--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="main">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#">HNGi7</a>
+                <a class="navbar-brand" href="/">HNGi7</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="https://github.com/Kikks" target="_blank">Github</a>
+                            <a class="nav-link" href="https://github.com/Kikks/leaderboard" target="_blank">Github</a>
                         </li>
                     </ul>
                 </div>
